--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
